[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/enemies/spirk/png/projectile/Sprite-projectile-4.png" type="Texture" id=1]
[ext_resource path="res://script/SpirkProjectile.gd" type="Script" id=2]
[ext_resource path="res://assets/art/enemies/spirk/png/projectile/Sprite-projectile-2.png" type="Texture" id=3]
[ext_resource path="res://assets/art/enemies/spirk/png/projectile/Sprite-projectile-3.png" type="Texture" id=4]
[ext_resource path="res://assets/art/enemies/spirk/png/projectile/Sprite-projectile-1.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "pulsing",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="SpirkProjectile" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="SpirkProjectileAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "pulsing"
frame = 3
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="ProjectileHitbox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_TimeToLive_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
